[gd_scene load_steps=14 format=3 uid="uid://2k4tpybmr0a4"]

[ext_resource type="Script" path="res://view/testing/testing.gd" id="1_ila0p"]
[ext_resource type="PackedScene" uid="uid://djxvqbwooew4i" path="res://quality_deck/QualityDeck.tscn" id="2_jk66l"]
[ext_resource type="Theme" path="res://utility/gray_button.tres" id="2_v7rmo"]
[ext_resource type="Script" path="res://view/testing/monitor.gd" id="3_fyhhs"]

[sub_resource type="Gradient" id="Gradient_hoyes"]
offsets = PackedFloat32Array(0.00854701)
colors = PackedColorArray(0.5022, 0.81, 0.5022, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_onmfj"]
gradient = SubResource("Gradient_hoyes")
width = 360
height = 680

[sub_resource type="Gradient" id="Gradient_2eb84"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.02)
colors = PackedColorArray(0.548963, 0.548963, 0.548962, 1, 0.74978, 0.74978, 0.74978, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rbs0c"]
gradient = SubResource("Gradient_2eb84")
width = 340
height = 200
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_kwkr2"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0.156863, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_y16ud"]
gradient = SubResource("Gradient_kwkr2")
width = 332
height = 192

[sub_resource type="Gradient" id="Gradient_0s5uh"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0, 0.635328)
colors = PackedColorArray(1, 0, 0.0166664, 1, 1, 1, 1, 0, 0, 0.882353, 0.34902, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_7bkks"]
noise_type = 0
frequency = 0.677
offset = Vector3(18, 0, 0)
fractal_type = 2
domain_warp_type = 1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qy6xc"]
width = 80
height = 45
color_ramp = SubResource("Gradient_0s5uh")
noise = SubResource("FastNoiseLite_7bkks")

[node name="Testing" type="Node2D"]
script = ExtResource("1_ila0p")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(180, 340)
texture = SubResource("GradientTexture2D_onmfj")

[node name="SceneName" type="RichTextLabel" parent="Background"]
offset_left = -170.0
offset_top = -300.0
offset_right = 170.0
offset_bottom = -250.0
bbcode_enabled = true
text = "[b][font_size=30][center]TESTING[/center][/font_size]"

[node name="Result" type="RichTextLabel" parent="Background"]
offset_left = -140.0
offset_top = -40.0
offset_right = 140.0
offset_bottom = 80.0
bbcode_enabled = true

[node name="Testers" type="RichTextLabel" parent="Background"]
offset_left = -140.0
offset_top = 80.0
offset_right = 160.0
offset_bottom = 210.0
text = "Testers:"

[node name="AssignButton" type="Button" parent="Background"]
texture_filter = 1
offset_left = -170.0
offset_top = 220.0
offset_right = 170.0
offset_bottom = 260.0
theme = ExtResource("2_v7rmo")
text = "Assign to Testing"

[node name="Monitor" type="Sprite2D" parent="Background"]
texture_filter = 1
position = Vector2(0, -150)
texture = SubResource("GradientTexture2D_rbs0c")
script = ExtResource("3_fyhhs")

[node name="Background" type="Sprite2D" parent="Background/Monitor"]
texture = SubResource("GradientTexture2D_y16ud")

[node name="Pixels" type="Sprite2D" parent="Background/Monitor"]
texture_filter = 1
scale = Vector2(4, 4)
texture = SubResource("NoiseTexture2D_qy6xc")

[node name="EmployeeHook" type="Node" parent="."]

[node name="QualityDeck" parent="." instance=ExtResource("2_jk66l")]

[connection signal="button_up" from="Background/AssignButton" to="." method="_on_assign_button_button_up"]
